--- a/sigmaCabs/app/styles/vehicleAddUpdate.scss
+++ b/sigmaCabs/app/styles/vehicleAddUpdate.scss
@@ -28,3 +28,6 @@
 .vehicle-add-update-container .supportTabGrid{
   height: 150px;
 }
+.vehicleBasicDetails .fieldContainer{
+  margin: 10px !important; 
+}
