--- a/sigmaCabs/app/views/bookings/existingCustomerAddBooking.html
+++ b/sigmaCabs/app/views/bookings/existingCustomerAddBooking.html
@@ -6,7 +6,7 @@
 	    <div data-ng-include="bookingStatistics" class="left"></div>
 	    <p class="clear"/>
 	</div>
-	<div data-ng-include="bookingTariffGrid"></div>
-    <div data-ng-include="bookingHistory"></div>
+	<div data-ng-include="bookingTariffGrid" style="margin-top: 7px;"></div>
+    <div data-ng-include="bookingHistory" style="margin-top: 7px;"></div>
     <div data-ng-include="extraInfoDetails" style="display:none;"></div>
 </div>
