--- a/sigmaCabs/app/views/vehicles/permitDetailsTab.html
+++ b/sigmaCabs/app/views/vehicles/permitDetailsTab.html
@@ -12,9 +12,8 @@
         <input type="text" ng-model="tmpPermitDetails.expiryDate" class="form-control validate[required,maxSize[128]] large" placeholder="Expiry Date" />
     </div>
     <div class="fieldContainer relative left">
-        <label class="control-label">Insurance Type</label>
-        <select class="form-control validate[maxSize[36]] large" ng-model="tmpPermitDetails.permitType" ng-options="value.type as value.title for value in insuranceTypeOptions">
-        </select>
+        <label class="control-label">RTA Location</label>
+        <input type="text" ng-model="tmpPermitDetails.expiryDate" class="form-control validate[required,maxSize[128]] large" placeholder="RTA Location" />
 
     </div>
     <div class="fieldContainer relative left">
