--- a/sigmaCabs/app/views/vehicles/roadTaxDetailsTab.html
+++ b/sigmaCabs/app/views/vehicles/roadTaxDetailsTab.html
@@ -14,7 +14,7 @@
 
     <div class="fieldContainer relative left">
         <label class="control-label">Premium Type</label>
-        <select class="form-control validate[maxSize[36]] large" ng-model="tmpRoadTaxDetails.premiumType" ng-options="value.type as value.title for value in insuranceTypeOptions">
+        <select class="form-control validate[maxSize[36]] large" ng-model="tmpRoadTaxDetails.premiumType" ng-options="value.type as value.title for value in roadTaxTypeOptions">
         </select>
     </div>
     <div class="fieldContainer relative left">
