--- a/sigmaCabs/app/views/bookings/checkVehicleAvilabilty.html
+++ b/sigmaCabs/app/views/bookings/checkVehicleAvilabilty.html
@@ -63,7 +63,7 @@
                             <legend class="searchbox-border">Stages</legend>
                             <div>
                                 <label class="labelCompact">1. Mid-night</label>
-                                <div class ="left"> &lt; 6Hr</div>
+                                <div class ="left"> 22Hr - 6Hr</div>
                             </div> 
                             <div>
                                 <label class="labelCompact">2. Morning</label>
