--- a/sigmaCabs/app/views/vehicles/vehicleExteriorCondtionTab.html
+++ b/sigmaCabs/app/views/vehicles/vehicleExteriorCondtionTab.html
@@ -1,14 +1,10 @@
 <div class="customer-booking-tabs">
     <ul class="nav nav-tabs" style="margin-top: 20px;">
-        <li data-ng-class="{ active: fnIsActiveExteriorSubTab(1)}" data-ng-click="fnSetActiveExteriorSubTab(1)"><a>Dents & Scratches</a>
+        <li data-ng-class="{ active: fnIsActiveExteriorSubTab(1)}" data-ng-click="fnSetActiveExteriorSubTab(1)"><a>Exterior Condition</a>
         </li>
-        <li data-ng-class="{ active: fnIsActiveExteriorSubTab(2)}" data-ng-click="fnSetActiveExteriorSubTab(2)"><a>Tyres</a>
+        <li data-ng-class="{ active: fnIsActiveExteriorSubTab(2)}" data-ng-click="fnSetActiveExteriorSubTab(2)"><a>Interior Condition</a>
         </li>
-        <li data-ng-class="{ active: fnIsActiveExteriorSubTab(3)}" data-ng-click="fnSetActiveExteriorSubTab(3)"><a>Lights</a>
-        </li>
-        <li data-ng-class="{ active: fnIsActiveExteriorSubTab(4)}" data-ng-click="fnSetActiveExteriorSubTab(4)"><a>Wind Shield</a>
-        </li>
-        <li data-ng-class="{ active: fnIsActiveExteriorSubTab(5)}" data-ng-click="fnSetActiveExteriorSubTab(5)"><a>Comments</a>
+        <li data-ng-class="{ active: fnIsActiveExteriorSubTab(3)}" data-ng-click="fnSetActiveExteriorSubTab(3)"><a>Vehicle Performance</a>
         </li>
     </ul>
 
@@ -21,11 +17,4 @@
     <div class="tab-body" data-ng-show="exteriorSubTab==3">
         <div data-ng-include="vehicleLightsDetails" style="clear:both;"></div>
     </div>
-    <div class="tab-body" data-ng-show="exteriorSubTab==4">
-        <div data-ng-include="vehicleWindShieldDetails" style="clear:both;"></div>
-    </div>
-    <div class="tab-body" data-ng-show="exteriorSubTab==5">
-        <div data-ng-include="vehicleExteriorComments" style="clear:both;"></div>
-    </div>
-
 </div>
