--- a/sigmaCabs/app/views/vehicles/vehicleSupportDetailsTab.html
+++ b/sigmaCabs/app/views/vehicles/vehicleSupportDetailsTab.html
@@ -8,6 +8,8 @@
         </li>
         <li data-ng-class="{ active: fnIsActiveSupportSubTab(4)}" data-ng-click="fnSetActiveSupportSubTab(4)"><a>RC Details</a>
         </li>
+        <li data-ng-class="{ active: fnIsActiveSupportSubTab(5)}" data-ng-click="fnSetActiveSupportSubTab(5)"><a>Polution/Fitness</a>
+        </li>
     </ul>
 
     <div class="tab-body" data-ng-show="supportSubTab==1">
@@ -21,6 +23,9 @@
     </div>
     <div class="tab-body" data-ng-show="supportSubTab==4">
         <div data-ng-include="vehicleRcDetails" style="clear:both;"></div>
+    </div>
+    <div class="tab-body" data-ng-show="supportSubTab==5">
+        <div data-ng-include="vehiclePollutionAndFitness" style="clear:both;"></div>
     </div>
 
 </div>
